TWC3119-574 - General CSS Fixes (#2025)
* TWC3119-574 - Price Cost Test - Fixed warning and error cells to have unified styling

* TWC3119-574 - Updated footer width so it doesn't overlap with Left Nav Panel

* TWC3119-574 - Contract Details - Dynamically set footer width if the Lnav is on screen

--- a/Intel.MyDeals/Client/src/app/contract/contractDetails/contractDetails.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/contractDetails/contractDetails.component.css
@@ -139,10 +139,14 @@
     text-align: right;
     font-size: 14px;
     background-color: #fafafa;
-    width: 82%;
+    width: calc(100% - 300px);
     position: fixed;
     right: 0;
     bottom: 64.5px !important
+}
+
+.secFooterFullWidth {
+    width: 100% !important;
 }
 
 .new-bus-contract .fullHeight {
